-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0 Beta1
-
None
-
-
cd8a01945c47956913739fadd047b5948cf89fed (qt/qttools/dev) 84e2d7fd52276a867a26a4be98144611fc8b6e5e (qt/qttools/6.1) 896b1bb9d1fa22db565678eed4bfee35b0703628 (qt/qttools/6.2)
After running windeployqt, the application fails to initialize TLS and warns "No TLS backend is available".
If I manually copy the plugins/tls directory, TLS works again. This seems to be related to the new pluggable TLS backends.
For Gerrit Dashboard: QTBUG-95247 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
369166,2 | windeployqt: Fix deployment of tls plugins | 6.2 | qt/qttools | Status: MERGED | +2 | 0 |
369170,3 | windeployqt: Fix deployment of tls plugins | dev | qt/qttools | Status: MERGED | +2 | 0 |
369187,2 | windeployqt: Fix deployment of tls plugins | 6.1 | qt/qttools | Status: MERGED | +2 | 0 |