windeployqt: Fix deployment of tls plugins

Since Qt 6.x the bearer plugins are gone. Reuse that entry for tls
plugins.

Fixes: QTBUG-95247
Change-Id: I68f8b20942375b124ba9859c23f1b1c770ab406c
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
(cherry picked from commit cd8a01945c47956913739fadd047b5948cf89fed)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>